Web Inspector: DOM nodes shift when hovering over them in Console https://bugs.webkit.org/show_bug.cgi?id=160789 <rdar://problem/27815600>
Reviewed by Matt Baker.

* UserInterface/Views/FormattedValue.css:
(.formatted-node > .tree-outline.dom ol): Deleted.


Canonical link: https://commits.webkit.org/179016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204520 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/FormattedValue.css
+++ b/Source/WebInspectorUI/UserInterface/Views/FormattedValue.css
@@ -68,10 +68,6 @@
     margin-left: -2px;
 }
 
-.formatted-node > .tree-outline.dom ol {
-    -webkit-padding-start: 1.2em;
-}
-
 .formatted-node > .tree-outline.dom li {
     -webkit-user-select: none !important;
 }
